The wrapper scripts for running PHP via CGI or fastCGI now have the immutable flag set on Linux, to prevent accidental deletion by domain owners.
New features in this version of Virtualmin and any plugins are shown on the System Information page, if using the Virtualmin theme.
---- Changes since 3.52 ----
Updated the WordPress installer to version 2.3.3, WordPress MU to 1.3.3, Rails to 2.0.2, Typo to 5.0.2, Radiant to 0.6.4, Turba to h3-2.1.7, Xoops to 2.0.18.1, phpBB to 2.0.23, and Joomla to 1.5.1 and 1.0.14.
Renamed the OpenAds installer to OpenX, and updated it to version 2.4.4.
The --quota and --mail-quota parameters to create-user.pl are now optional. If missing the defaults for the domain or template will be used.
Added the check-config.pl command line script for validating the Virtualmin configuration.
Apache log files outside a domain's home directory are renamed and deleted when appropriate.
Hitting Stop in the browser during the creation of a virtual server or some other action will no longer cancel it, which prevents domains from being half created.
When the Apache virtual host *.domain exists and a new virtual host for something.domain is created, it is placed before *.domain in the Apache config file to give it precedence.
SSL can now be enabled for domains without a private IP address, for a single virtual server on each shared address. This means that on a typical single-IP system, you can have one SSL website. This replaces the --ip-primary flag to create-domain.pl.
The logrotate configuration is now validated by Virtualmin, to detect duplicate entries that can cause rotation to stop working.
The SpamAssassin version is validated as part of the configuration check, to ensure that it supports the needed --siteconfigpath parameter.
Vpopmail systems with so many domains that letter-suffix directories under /home/vpopmail/domains are needed are now handed by Virtualmin.