@@ -838,3 +838,4 @@ SSL can now be enabled for domains without a private IP address, for a single vi
 The logrotate configuration is now validated by Virtualmin, to detect duplicate entries that can cause rotation to stop working.
 The SpamAssassin version is validated as part of the configuration check, to ensure that it supports the needed --siteconfigpath parameter.
 Vpopmail systems with so many domains that letter-suffix directories under /home/vpopmail/domains are needed are now handed by Virtualmin.
+When a DNS domain is disabled, all records in it that use the domain name are renamed too, to keep BIND happy.
